[gd_scene load_steps=11 format=3 uid="uid://dmcfhdrgjaqqw"]

[ext_resource type="Script" uid="uid://gtgw2e6juj6o" path="res://Levels/Tasks/task.gd" id="1_as5vy"]
[ext_resource type="Texture2D" uid="uid://bva8xh5n0052b" path="res://icon.svg" id="2_iitbh"]
[ext_resource type="PackedScene" uid="uid://c8lw7cpbrv5r3" path="res://UI/scores.tscn" id="3_yisrm"]
[ext_resource type="PackedScene" uid="uid://cm10bkdq5b4in" path="res://UI/timer_ui.tscn" id="4_llemg"]
[ext_resource type="Script" uid="uid://c34wo6p14kxa4" path="res://Levels/Tasks/Take Trash Out/bins.gd" id="5_mhpnx"]
[ext_resource type="Texture2D" uid="uid://dko48qpqp0lfl" path="res://Assets/Textures/Orange/texture_09.png" id="6_as5vy"]
[ext_resource type="Texture2D" uid="uid://dkof72t0yri1y" path="res://Assets/Textures/Green/texture_09.png" id="6_bwxr7"]
[ext_resource type="Script" uid="uid://beipr1ku8lrnk" path="res://Levels/Tasks/Take Trash Out/dropper.gd" id="7_iitbh"]
[ext_resource type="Texture2D" uid="uid://d2rc2jssri8tn" path="res://Assets/Textures/Purple/texture_09.png" id="7_llemg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h77ne"]
size = Vector2(300, 150)

[node name="Take Trash Out" type="Node2D"]
script = ExtResource("1_as5vy")
metadata/_custom_type_script = "uid://gtgw2e6juj6o"

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iitbh")

[node name="Scores" parent="." instance=ExtResource("3_yisrm")]
time = 30
scoreMultiplier = 2

[node name="Timer UI" parent="." instance=ExtResource("4_llemg")]

[node name="Recycle" type="Area2D" parent="."]
position = Vector2(960, 1006)
collision_layer = 2
collision_mask = 2
script = ExtResource("5_mhpnx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Recycle"]
shape = SubResource("RectangleShape2D_h77ne")

[node name="Button" type="Button" parent="Recycle"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -151.0
offset_top = -76.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="Recycle"]
scale = Vector2(0.3, 0.15)
texture = ExtResource("6_as5vy")

[node name="General" type="Area2D" parent="."]
position = Vector2(1420, 1006)
collision_layer = 2
collision_mask = 2
script = ExtResource("5_mhpnx")
type = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="General"]
shape = SubResource("RectangleShape2D_h77ne")

[node name="Button" type="Button" parent="General"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -151.0
offset_top = -76.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="General"]
scale = Vector2(0.3, 0.15)
texture = ExtResource("7_llemg")

[node name="Organic" type="Area2D" parent="."]
position = Vector2(500, 1006)
collision_layer = 2
collision_mask = 2
script = ExtResource("5_mhpnx")
type = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Organic"]
shape = SubResource("RectangleShape2D_h77ne")

[node name="Button" type="Button" parent="Organic"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -151.0
offset_top = -76.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="Organic"]
scale = Vector2(0.3, 0.15)
texture = ExtResource("6_bwxr7")

[node name="Dropper" type="Node2D" parent="."]
position = Vector2(960, 0)
script = ExtResource("7_iitbh")
speed = 250.0
speedMultiplier = 1.05
interval = 1.5
intervalMultiplier = 0.95

[connection signal="body_entered" from="Recycle" to="Recycle" method="_on_body_entered"]
[connection signal="button_down" from="Recycle/Button" to="Recycle" method="_on_button_button_down"]
[connection signal="button_up" from="Recycle/Button" to="Recycle" method="_on_button_button_up"]
[connection signal="body_entered" from="General" to="General" method="_on_body_entered"]
[connection signal="button_down" from="General/Button" to="General" method="_on_button_button_down"]
[connection signal="button_up" from="General/Button" to="General" method="_on_button_button_up"]
[connection signal="body_entered" from="Organic" to="Organic" method="_on_body_entered"]
[connection signal="button_down" from="Organic/Button" to="Organic" method="_on_button_button_down"]
[connection signal="button_up" from="Organic/Button" to="Organic" method="_on_button_button_up"]
